--- a/The Complete Node.js Developer Course/web-server/package.json
+++ b/The Complete Node.js Developer Course/web-server/package.json
@@ -13,5 +13,9 @@
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "postman-request": "^2.88.1-postman.31"
+  },
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.4"
   }
 }
