--- a/The Complete Node.js Developer Course/web-server/package.json
+++ b/The Complete Node.js Developer Course/web-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
   "engines": {
     "node": "16.13.0",
     "npm": "8.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
