--- a/The Complete Node.js Developer Course/task-manager/package.json
+++ b/The Complete Node.js Developer Course/task-manager/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^4.7.0",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "validator": "^13.7.0"
   }
 }
